--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -47,13 +47,28 @@
 						</td>
 						<td><%= link_to book.title, book, class: "book_#{book.id}" %></td>
 						<td><%= book.body %></td>
+						<!-- いいね機能 -->
+						<% if book.favorited_by?(current_user) %>
+					<td>
+						<%= link_to book_favorites_path(book), method: :delete do %>
+						<i class="glyphicon glyphicon-heart" aria-hidden="true"></i>
+						<%= book.favorites.count %>
+						<% end %>
+				    </td>
+				    <% else %>
+				    <td>
+				    	<%= link_to book_favorites_path(book), method: :post do %>
+				    	<i class="glyphicon glyphicon-heart-empty" aria-hidden="true" style="color: :red;"></i>
+				    	<%= book.favorites.count %>
+				    	<% end %>
+				    </td>
+				    <% end %>
+					    <!-- いいね機能 -->
+						<td><%= link_to "コメント数：#{book.book_comments.count}", book_path(book.id) %></td>
 					</tr>
 					<% end %>
 				</tbody>
 			</table>
-
 			<!--books一覧 -->
-
-
 		</div>
 	</div>
