--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,15 @@
-
+<!--エラーメッセージ -->
+<% if @book_comment.errors.any? %>
+<div class="error_explanation" >
+	<h2><%= @book_comment.errors.count %>errors prohibited this book from being saved:</h2>
+	<ul>
+		<% @book_comment.errors.full_messages.each do |bookcomment| %>
+		<li><%= bookcomment %></li>
+		<% end %>
+	</ul>
+</div>
+<% end %>
+<!-- エラーメッセージ -->
 <div class="row">
 	<div class="col-xs-3">
 
@@ -23,6 +34,27 @@
 					</td>
 					<td><%= link_to @book.title, @book %></td>
 					<td><%= @book.body %></td>
+					<!-- いいね機能 -->
+                   <% if @book.favorited_by?(current_user) %>
+
+					<td>
+						<%= link_to book_favorites_path(@book), method: :delete do %>
+						<i class="glyphicon glyphicon-heart" aria-hidden="true"></i>
+						<%= @book.favorites.count %>
+						<% end %>
+				    </td>
+				    <% else %>
+				    <td>
+				    	<%= link_to book_favorites_path(@book), method: :post do %>
+				    	<i class="glyphicon glyphicon-heart-empty" aria-hidden="true" style="color: :red;"></i>
+				    	<%= @book.favorites.count %>
+				    	<% end %>
+				    </td>
+				    <% end %>
+					<!-- いいね機能 -->
+					<!-- コメント機能 -->
+					<td>コメント数：<%= @book.book_comments.count %></td>
+					<!-- コメント機能 -->
 					<!-- 投稿したユーザーのみ編集・削除ボタンが現れるようにする -->
 					<% if current_user == @book.user %>
 					<td><%= link_to "Edit",edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
@@ -30,6 +62,31 @@
 					<% end %>
 				</tr>
 			</table>
+			<!-- コメント一覧 -->
+			<table class="table">
+			<% @book_comments.each do |c| %>
+			<tr>
+				<td><%= c.user.name %></td>
+				<td><%= c.comment %></td>
+				<% if current_user == c.user %>
+			     <td><%= link_to "Destroy", book_book_comment_path(@book, c), method: :delete,class: "btn-sm btn-danger" %></td>
+			     <% end %>
+			</tr>
+			 <% end %>
+			 </table>
+			 <!-- tr td th の違い -->
+			<!-- コメント一覧 -->
+			<!-- コメント記入欄 -->
+			 <%= form_for [@book, @book_comment] do |f| %>
+             <div class="row">
+               <div class="col-sm-12">
+                  <%= f.text_area :comment, rows:'5', class: "form-control"%>
+            <!--  placeholder: "コメントをここに"  -->
+               </div>
+             </div>
+             <%= f.submit "送信", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
+　　　　　　<% end %>
+			<!-- コメント記入欄 -->
 
 	</div>
 </div>
