--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -35,25 +35,14 @@
 					<td><%= link_to @book.title, @book %></td>
 					<td><%= @book.body %></td>
 					<!-- いいね機能 -->
-                   <% if @book.favorited_by?(current_user) %>
-
-					<td>
-						<%= link_to book_favorites_path(@book), method: :delete do %>
-						<i class="glyphicon glyphicon-heart" aria-hidden="true"></i>
-						<%= @book.favorites.count %>
-						<% end %>
-				    </td>
-				    <% else %>
-				    <td>
-				    	<%= link_to book_favorites_path(@book), method: :post do %>
-				    	<i class="glyphicon glyphicon-heart-empty" aria-hidden="true" style="color: :red;"></i>
-				    	<%= @book.favorites.count %>
-				    	<% end %>
-				    </td>
-				    <% end %>
+                   <td id="favorites_buttons_<%= @book.id %>">
+							<%= render partial: 'favorites/favorite', locals: {book: @book} %>
+						</td>
 					<!-- いいね機能 -->
 					<!-- コメント機能 -->
-					<td>コメント数：<%= @book.book_comments.count %></td>
+					<td id="book_comments_count">
+						<%= render partial: 'book_comments/count', locals: { book_comments: @book_comments} %>
+						</td>
 					<!-- コメント機能 -->
 					<!-- 投稿したユーザーのみ編集・削除ボタンが現れるようにする -->
 					<% if current_user == @book.user %>
@@ -64,28 +53,21 @@
 			</table>
 			<!-- コメント一覧 -->
 			<table class="table">
-			<% @book_comments.each do |c| %>
 			<tr>
-				<td><%= c.user.name %></td>
-				<td><%= c.comment %></td>
-				<% if current_user == c.user %>
-			     <td><%= link_to "Destroy", book_book_comment_path(@book, c), method: :delete,class: "btn-sm btn-danger" %></td>
-			     <% end %>
+				<td id="book_comments_area">
+					<%= render partial: 'book_comments/comment_index', locals: { book_comments: @book_comments, book: @book } %>
+				</td>
 			</tr>
-			 <% end %>
 			 </table>
 			 <!-- tr td th の違い -->
 			<!-- コメント一覧 -->
 			<!-- コメント記入欄 -->
-			 <%= form_for [@book, @book_comment] do |f| %>
              <div class="row">
                <div class="col-sm-12">
-                  <%= f.text_area :comment, rows:'5', class: "form-control"%>
+                  <%= render partial: 'book_comments/form', locals: { book_comment: @book_comment, book: @book } %>
             <!--  placeholder: "コメントをここに"  -->
                </div>
              </div>
-             <%= f.submit "送信", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
-　　　　　　<% end %>
 			<!-- コメント記入欄 -->
 
 	</div>
